liealg in msdsams

--- a/common/intro.tex
+++ b/common/intro.tex
@@ -528,16 +528,12 @@ at least in the beginning, as {\em My Professor}
 
 
 \begin{figure}
-\color{figcolor}
-\begin{center}
-\begin{fsL}
-\input{../common/math/graphics/history/notablemath.tex}
-\end{fsL}
-\end{center}
-\caption{
-   Number of notable mathematicians alive over time
-   \label{fig:intro_timeline}
-   }
+  \centering%
+  \includegraphics[width=\tw]{../common/math/graphics/pdfs/notablemath.pdf}
+  \caption{
+    Number of notable mathematicians alive over time
+    \label{fig:intro_timeline}
+    }
 \end{figure}
 
 But it is not that applications are no longer important to mathematics,
