--- a/common/liealg.tex
+++ b/common/liealg.tex
@@ -10,11 +10,10 @@
 %---------------------------------------
 \begin{definition}
 \citetbl{
-  \citerp{carter2005}{1} \\
-  \citerp{jacobson1979}{}
+  \citerp{carter2005}{1},
+  \citer{jacobson1979}
   }
 \label{def:lie}
-\index[xsym]{$\lpairn$}
 %---------------------------------------
 Let $\spV=(\setX,F,\oplus,\otimes)$ be a vector space.
 \defbox{\begin{array}{M}
@@ -41,7 +40,7 @@ The pair $\opair{\spV}{\lpairn}$ is a \hid{lie algebra} if
   \end{array}$
 \end{array}}
 \citetblt{
-  \citorp{jacobi1862}{41}
+  \citerp{jacobi1862}{41}
   }
 \end{definition}
 
@@ -109,11 +108,11 @@ Let $\bar{\spX}$ be the set of all subspaces of $\spX$.
 %---------------------------------------
 Let $\spX$ be a set.
 \exbox{
-  \left.\begin{array}{rclCD}
+  \brb{\begin{array}{rclCD}
     \lpair{x}{y} &\eqd& xy-yx   & \forall x,y\in\spX \\
     z(x+y)       &=&    zx + zy & \forall x,y,z\in\spX & (left distributive) \\
     (x+y)z       &=&    xz + yz & \forall x,y,z\in\spX & (right distributive) 
-  \end{array}\right\}
+  \end{array}}
   \implies
   \text{The pair $\opair{\spX}{\lpair{x}{y}}$ is a lie algebra.}
   }
@@ -163,10 +162,7 @@ Let $\spX$ be a set.
       \\&= 0
     \end{align*}
   \end{enumerate}
-
 \end{proof}
-
-
 
 %---------------------------------------
 \begin{example}[Cross-product]
@@ -174,9 +170,9 @@ Let $\spX$ be a set.
 %---------------------------------------
 Let $\spX$ be a set and $\times$ the vector \hie{cross-product}.
 \exbox{
-  \left.\begin{array}{rclCD}
+  \brb{\begin{array}{rclCD}
     \lpair{\vx}{\vy} &\eqd& \vx \times \vy   & \forall \vx,\vy\in\spX \\
-  \end{array}\right\}
+  \end{array}}
   \quad\implies\quad
   \text{The pair $\opair{\spX}{\lpair{\vx}{\vy}}$ is a lie algebra.}
   }
