Metric Transforms has its own file

--- a/abcssp/intro/overview.tex
+++ b/abcssp/intro/overview.tex
@@ -223,27 +223,27 @@ Here is partial summary of what may be found there:
   does \emph{not} necessarily hold for all \structe{triple}s $\otriple{p}{q}{r}$ in $\R^\xN$.
 \end{minipage}\hfill\tbox{\includegraphics{../common/math/graphics/pdfs/larc_trieq.pdf}}
 
-\imarks \fbox{\pref{app:pds}} introduces what is herein called the \structe{power distance space}. 
-  This space is a generalization of the \structe{metric space},
-  and is a \structe{distance space} that satisfies what is herein called the \fncte{power triangle inequality}:
-  \\\indentx$\begin{array}{rclCC}
-    \distance{x}{y} &\orel& 2\sigma\brs{\frac{1}{2}\distancep{p}{x}{z} + \frac{1}{2}\distancep{p}{z}{y}}^\frac{1}{p} & \forall \opair{p}{\sigma}\in\Rx\times\Rnn, & x,y,z\in\setX
-  \end{array}$\\
-  It turns out that the inequality $2\sigma\le2^\frac{1}{p}$ has special significance with regards to these spaces
-  and appears repeatedly in \pref{app:pds}.
-  It is plotted in \prefpp{fig:intro_sigmap}.
-  \structe{Power distance space}s are not explicitly used in this text. 
-  However, they may prove useful to future research in symbolic sequence processing space
-  in which the \prope{triangle inequality} fails to hold, but in which some of the key properties of a metric space 
-  are still required.
-\begin{figure}[h]
-  \gsize%
-  \centering%
-  \includegraphics{../common/math/graphics/pdfs/trirel_sigmap.pdf}
-  \caption{$\sigma = \frac{1}{2}(2^{\frac{1}{p}}) = 2^{\frac{1}{p}-1}$ or $p=\frac{\ln2}{\ln(2\sigma)}$ 
-  \label{fig:intro_sigmap}
-  }
-\end{figure}
+%20201205%\imarks \fbox{\pref{app:pds}} introduces what is herein called the \structe{power distance space}. 
+%20201205%  This space is a generalization of the \structe{metric space},
+%20201205%  and is a \structe{distance space} that satisfies what is herein called the \fncte{power triangle inequality}:
+%20201205%  \\\indentx$\begin{array}{rclCC}
+%20201205%    \distance{x}{y} &\orel& 2\sigma\brs{\frac{1}{2}\distancep{p}{x}{z} + \frac{1}{2}\distancep{p}{z}{y}}^\frac{1}{p} & \forall \opair{p}{\sigma}\in\Rx\times\Rnn, & x,y,z\in\setX
+%20201205%  \end{array}$\\
+%20201205%  It turns out that the inequality $2\sigma\le2^\frac{1}{p}$ has special significance with regards to these spaces
+%20201205%  and appears repeatedly in \pref{app:pds}.
+%20201205%  It is plotted in \prefpp{fig:intro_sigmap}.
+%20201205%  \structe{Power distance space}s are not explicitly used in this text. 
+%20201205%  However, they may prove useful to future research in symbolic sequence processing space
+%20201205%  in which the \prope{triangle inequality} fails to hold, but in which some of the key properties of a metric space 
+%20201205%  are still required.
+%20201205%\begin{figure}[h]
+%20201205%  \gsize%
+%20201205%  \centering%
+%20201205%  \includegraphics{../common/math/graphics/pdfs/trirel_sigmap.pdf}
+%20201205%  \caption{$\sigma = \frac{1}{2}(2^{\frac{1}{p}}) = 2^{\frac{1}{p}-1}$ or $p=\frac{\ln2}{\ln(2\sigma)}$ 
+%20201205%  \label{fig:intro_sigmap}
+%20201205%  }
+%20201205%\end{figure}
 
 
 
