--- a/abcssp/ssp/ocsseq.tex
+++ b/abcssp/ssp/ocsseq.tex
@@ -412,15 +412,14 @@ This sequence is of length 18959 and is partially displayed here:
 Consider the genome sequence (DNA sequence) for the SARS-COV-2 virus with GenBank accession 
 \lstinline{MT072688.1}.\footnote{\citeP{sah2020}, \citer{ncbiSARSCoV2}}
 This sequence is of length 29811. % and is partially displayed here:
-%  \\\includegraphics{../common/math/sspplots/dna_ebola_51_seq.pdf}\\
    \\\includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_51_seq.pdf}
-%     \\\begin{tabular}{|>{\scs}c|>{\scs}c|}
-%          \hline
-%          \includegraphics{../common/math/sspplots/dna_ebola_histo.pdf}%
-%         &\includegraphics{../common/math/sspplots/dna_ebola_auto.pdf}
-%         %\\histogram & autocorrelation
-%        \\\hline
-%     \end{tabular}
+     \\\begin{tabular}{|>{\scs}c|>{\scs}c|}
+          \hline
+          \includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_histo.pdf}%
+         &\includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_auto.pdf}
+         %\\histogram & autocorrelation
+        \\\hline
+     \end{tabular}
 \end{example}
 
 %---------------------------------------
