--- a/abcssp/ssp/sspdft.tex
+++ b/abcssp/ssp/sspdft.tex
@@ -390,3 +390,68 @@
 \end{example}
 
 
+%---------------------------------------
+\begin{example}[\exmd{Fourier analysis of SARS-CoV-2 DNA sequence}]
+\label{ex:dftSARS-CoV-2}
+\addcontentsline{toc}{subsubsection}{* Fourier analysis of SARS-CoV-2 DNA sequence}
+\mbox{}\\
+%---------------------------------------
+\begin{enumerate}
+  \item \label{item:dftSARS-CoV-2_psp}
+     Consider the SARS-CoV-2 DNA sequence described in \prefpp{ex:dna_SARSCoV2}.\footnote{\citeD{ncbiSARSCoV2}}
+     %DNA sequences commonly exhibit a strong DFT harmonic component at $\sfrac{2\pi}{3}$ 
+     %radians.\footnote{\citePp{galleani2010}{771}}
+  
+  \item \label{item:dftSARS-CoV-2_R1pam}
+    %Suppose we first use the \fncte{PAM DNA random variable} \xref{def:rv_dnapam} to map
+    %the DNA sequence into $\R^1$.
+    The magnitude of $\dft:\R^1\to\C^1$ of the sequence after applying this mapping is as follows:
+    \\\begin{tabular}{|>{\scs}c|}
+         \hline
+         \includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_dftR1.pdf}%
+       \\\hline
+    \end{tabular}
+    %The component at $\sfrac{2\pi}{3}$ is easy to pick out with a signal to noise ratio (SNR) of\\ 
+    %$10\log_{10}(4.290296/1.123163)\approx5.8$ dB.\footnote{\seessp{dna_AF086833_SARS-CoV-2_dft.xlg}}
+    %Here, the noise value 1.123163 is the \fncte{RMS} (\fncte{root mean square}) of the DFT magnitude 
+    %sequence from $n=1$ to $n=\xN/2-1$ computed as follows:
+    %\\\indentx$\ds\sqrt{\frac{1}{\xN/2-1}\sum_{n=1}^{n=\xN/2-1} x_n^2}$.
+     
+  \item \label{item:dftSARS-CoV-2_C1qpsk}
+    %Suppose we next use the \fncte{QPSK DNA random variable} \xref{def:rv_dieqpsk} to map
+    %the dna sequence into the complex plane.
+    The magnitude of $\dft:\C^1\to\C^1$ of the sequence after applying this mapping is as follows:
+     \\\begin{tabular}{|>{\scs}c|}
+          \hline
+          \includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_dftC1.pdf}%
+        \\\hline
+     \end{tabular}
+    %The component at $\sfrac{2\pi}{3}$ is again easy to pick out with a signal to noise ratio (SNR) of\\
+    %$10\log_{10}(6.412578/0.998659)\approx8.1$ dB.\footnote{\seessp{dna_AF086833_SARS-CoV-2_dft.xlg}}
+    %Here, the noise value 0.998659 is the \fncte{RMS} of the DFT magnitude 
+    %sequence from $n=1$ to $n=\xN-1$.
+    %C^1 rms = 0.998685, max=6.412578   8.0760413380372487836054657324457 dB
+
+  \item \label{item:dftSARS-CoV-2_R4}
+    %Suppose we next use the \fncte{$\R^4$ DNA random variable} \xref{def:rv_dnaR4} to map
+    %the sequence into $\R^4$.
+    The magnitude of $\dft:\R^4\to\C^4$ of the mapped sequence is as follows:
+    \\\begin{tabular}{|>{\scs}c|}
+         \hline
+         \includegraphics{../common/math/graphics/pdfs/dna_SARSCoV2_dftR4.pdf}%
+       \\\hline
+    \end{tabular}
+    %The component at $\sfrac{2\pi}{3}$ is again easy to pick out with a signal to noise ratio (SNR) of\\ 
+    %$10\log_{10}(3.944811/0.860665)\approx 6.6$ dB.\footnote{\seessp{dna_AF086833_SARS-CoV-2_dft.xlg}}
+    %Here, the noise value 0.860665 is the \fncte{RMS} of the DFT magnitude 
+    %sequence from $n=1$ to $n=\xN/2-1$.
+    %R^4 rms = 0.860710, max=3.944811    6.6116935177820583786215400221832 dB
+
+  %\item In conclusion, for this application, there is only a small advantage to using 
+  %      the $\R^4$ mapping \xrefr{item:dftSARS-CoV-2_R4}
+  %      versus the $\R^1$ mapping \xrefr{item:dftSARS-CoV-2_R1pam}, 
+  %      and even a demonstrable disadvantage when compared to the $\C^1$ mapping \xrefr{item:dftSARS-CoV-2_C1qpsk}.
+\end{enumerate}
+\end{example}
+
+
