--- a/common/distance.tex
+++ b/common/distance.tex
@@ -310,30 +310,67 @@ Let $\psetX$ be the \structe{power set} of $\setX$.
 %a \structe{distance space} does \textbf{not} in general induce a topology.
 %\end{remark}
 %
+%see next theorem%%---------------------------------------
+%see next theorem%\begin{remark}
+%see next theorem%%---------------------------------------
+%see next theorem%%Let $\dspaceX$ be a \structb{distance space} \xref{def:dspace}.
+%see next theorem%Let $\seqxZ{x_n}$ be a \fncte{sequence} in a \structe{distance space} $\dspaceX$.
+%see next theorem%The \structe{distance space} $\dspaceX$ does not necessarily have all the nice properties that a 
+%see next theorem%\structe{metric space} \xref{def:metric} has.
+%see next theorem%In particular, note the following:
+%see next theorem%\\\indentx\remboxp{$\begin{array}{FMcMM}
+%see next theorem%  1. & $\distancen$   is a \fncte{distance} in $\dspaceX$ &\notimplies& $\distancen$ is \prope{continuous} in $\dspaceX$                  & \xref{ex:dspace_21}.\\
+%see next theorem%  2. & $\balln$ is an \structe{open ball} in $\dspaceX$ &\notimplies& $\balln$ is \prope{open} in $\dspaceX$                              & \xref{ex:dspace_1n}.\\
+%see next theorem%  3. & $\baseB$ is the set of all                                    &\notimplies& $\baseB$ is a \structe{base} for a                     & \xref{ex:dspace_1n}.\footnotemark\\
+%see next theorem%     &                            \structe{open ball}s in $\dspaceX$ &           &                                    topology on $\setX$ & \\
+%see next theorem%  4. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& limit is \prope{unique}                                             & \xref{ex:dspace_01}.\\
+%see next theorem%  5. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& $\seqn{x_n}$ is \prope{Cauchy} in $\dspaceX$                        & \xref{ex:dspace_1n}.\\
+%see next theorem%\end{array}$}
+%see next theorem%%In a \structe{metric space} \xref{def:metric}, if a \fncte{sequence} has a limit, that limit is unique.
+%see next theorem%%This is not true in general for \structe{distance space}s \xref{def:distance}.
+%see next theorem%%See \prefpp{ex:dspace_01} for a distance space which converges to two distinct limits.
+%see next theorem%\footnotetext{
+%see next theorem%  \citePpc{heath1961}{810}{{\scshape Theorem}},
+%see next theorem%  \citePpc{galvin1984}{71}{{\scshape 2.3 Lemma}}
+%see next theorem%  }
+%see next theorem%\end{remark}
+
 %---------------------------------------
-\begin{remark}
+\begin{theorem}
+\footnote{
+  \citeP{greenhoe2015pds}
+  }
+\label{thm:dspacecost}
 %---------------------------------------
 %Let $\dspaceX$ be a \structb{distance space} \xref{def:dspace}.
 Let $\seqxZ{x_n}$ be a \fncte{sequence} in a \structe{distance space} $\dspaceX$.
 The \structe{distance space} $\dspaceX$ does not necessarily have all the nice properties that a 
 \structe{metric space} \xref{def:metric} has.
 In particular, note the following:
-\\\indentx\remboxp{$\begin{array}{FMcMM}
-  1. & $\distancen$   is a \fncte{distance} in $\dspaceX$ &\notimplies& $\distancen$ is \prope{continuous} in $\dspaceX$                  & \xref{ex:dspace_21}.\\
-  2. & $\balln$ is an \structe{open ball} in $\dspaceX$ &\notimplies& $\balln$ is \prope{open} in $\dspaceX$                              & \xref{ex:dspace_1n}.\\
-  3. & $\baseB$ is the set of all                                    &\notimplies& $\baseB$ is a \structe{base} for a                     & \xref{ex:dspace_1n}.\footnotemark\\
-     &                            \structe{open ball}s in $\dspaceX$ &           &                                    topology on $\setX$ & \\
-  4. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& limit is \prope{unique}                                             & \xref{ex:dspace_01}.\\
-  5. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& $\seqn{x_n}$ is \prope{Cauchy} in $\dspaceX$                        & \xref{ex:dspace_1n}.\\
-\end{array}$}
+\\\thmbox{\begin{array}{FMcM}
+  1. & $\distancen$   is a \fncte{distance} in $\dspaceX$ &\notimplies& $\distancen$ is \prope{continuous} in $\dspaceX$                  \\
+  2. & $\balln$ is an \structe{open ball} in $\dspaceX$ &\notimplies& $\balln$ is \prope{open} in $\dspaceX$                              \\
+  3. & $\baseB$ is the set of all \structe{open ball}s in $\dspaceX$ &\notimplies& $\baseB$ is a \structe{base} for a topology on $\setX$ \\
+  4. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& limit is \prope{unique}                                             \\
+  5. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\notimplies& $\seqn{x_n}$ is \prope{Cauchy} in $\dspaceX$                        
+\end{array}}
 %In a \structe{metric space} \xref{def:metric}, if a \fncte{sequence} has a limit, that limit is unique.
 %This is not true in general for \structe{distance space}s \xref{def:distance}.
 %See \prefpp{ex:dspace_01} for a distance space which converges to two distinct limits.
+\end{theorem}
+\begin{proof}
+\\$\begin{array}{FMM}
+  1. & $\distancen$ is \prope{continuous} in $\dspaceX$                    & \prefp{ex:dspace_21}.\\
+  2. & $\balln$ is \prope{open} in $\dspaceX$                              & \prefp{ex:dspace_1n}.\\
+  3. & $\baseB$ is a \structe{base} for a topology on $\setX$              & \prefp{ex:dspace_1n}.\footnotemark\\
+  4. & limit is \prope{unique}                                             & \prefp{ex:dspace_01}.\\
+  5. & $\seqn{x_n}$ is \prope{Cauchy} in $\dspaceX$                        & \prefp{ex:dspace_1n}.
+\end{array}$
 \footnotetext{
   \citePpc{heath1961}{810}{{\scshape Theorem}},
   \citePpc{galvin1984}{71}{{\scshape 2.3 Lemma}}
   }
-\end{remark}
+\end{proof}
 
 
 %=======================================
