--- a/common/larc.tex
+++ b/common/larc.tex
@@ -91,13 +91,13 @@ in this way $\metricn$ would be an \structe{extension} of $\metrican$.          
 %  \imark & natural and man-made objects entering/exiting the earth's atmosphere & \prefpp{sec:space} \\
 %  \imark & 
 %and for certain distance spaces useful in symbolic sequence processing \xref{sec:ocsseq}.
-In this text, the \fncte{Langrange arc distance} is used in
-\\\indentx\begin{tabular}{cl@{\hspace{1ex}}ll>{\scs}l}
-      \imark & the \ope{low pass filtering}  & of a \structe{real die sequence}          & \xref{ex:rdie_lp}  & and 
-    \\\imark & the \ope{low pass filtering}  & of a \structe{spinner sequence}           & \xref{ex:spin_lp}  & and 
-    \\\imark & the \ope{high pass filtering} & of a \structe{weighted real die sequence} & \xref{ex:wrdie_hp} & and 
-    \\\imark & the \ope{high pass filtering} & of a \structe{weighted spinner sequence}  & \xref{ex:spin_rhp}.& 
-\end{tabular}
+%In this text, the \fncte{Langrange arc distance} is used in
+%\\\indentx\begin{tabular}{cl@{\hspace{1ex}}ll>{\scs}l}
+%      \imark & the \ope{low pass filtering}  & of a \structe{real die sequence}          & \xref{ex:rdie_lp}  & and 
+%    \\\imark & the \ope{low pass filtering}  & of a \structe{spinner sequence}           & \xref{ex:spin_lp}  & and 
+%    \\\imark & the \ope{high pass filtering} & of a \structe{weighted real die sequence} & \xref{ex:wrdie_hp} & and 
+%    \\\imark & the \ope{high pass filtering} & of a \structe{weighted spinner sequence}  & \xref{ex:spin_rhp}.& 
+%\end{tabular}
 
 %=======================================
 \subsection{Linear interpolation}
@@ -113,14 +113,14 @@ Linear interpolation
 between two points $p\eqd\opair{x_1}{y_1}$ and $q\eqd\opair{x_2}{y_2}$ in $\R^2$ 
 is conveniently and intuitively
 expressed in a \structe{Cartesian coordinate system}
-using what is commonly known as \ope{Lagrange interpolation} \xref{def:lagpoly} in the form 
+using what is commonly known as \ope{Lagrange interpolation}\ifsxref{interpo}{def:lagpoly} in the form 
   \\\indentx$\ds y = y_1\brp{\frac{x-x_2}{x_1-x_2}} + y_2\brp{\frac{x-x_1}{x_2-x_1}}$.\\
 
-\ope{Newton interpolation} \xref{def:newpoly} yields the same expression, 
+\ope{Newton interpolation}\ifsxref{interpo}{def:newpoly} yields the same expression, 
 but generally requires more ``effort" (back substitution or matrix algebra):
 \begin{align*}
   y   &\eqd%\mathrlap{ 
-        \mcom{\sum_{k=1}^2\alpha_k\sum_{m=1}^k(x-x_m)}{\fncte{Newton polynomial} \xrefr{def:newpoly}}
+        \mcom{\sum_{k=1}^2\alpha_k\sum_{m=1}^k(x-x_m)}{\fncte{Newton polynomial}\ifsxref{interpo}{def:newpoly}}
         %&& \text{by definition of \fncte{Newton polynomial} \xref{def:newpoly}}
         %\\&=\mathrlap
           = \alpha_1\brs{x-x_1} + \alpha_2\brs{(x-x_1)+(x-x_2)}
@@ -213,7 +213,7 @@ Note the following:
       \begin{align*}
         \fr(\theta) 
           &= r_p\brs{\frac{\theta-\theta_q}{\theta_p-\theta_q}} + r_q\brs{\frac{\theta-\theta_p}{\theta_q-\theta_p}}
-          && \text{Langrange form \xref{def:lagpoly}}
+          && \text{Langrange form\ifsxref{interpo}{def:lagpoly}}
         \\&= r_p\brs{\frac{\theta-\phi}{0-\phi}} + r_q\brs{\frac{\theta-0}{\phi-0}}
            = \frac{-r_p\theta + r_p\phi + r_q\theta}{\phi}
         \\&= \brp{\frac{r_q-r_p}{\phi}}\theta + r_p
@@ -1646,9 +1646,8 @@ are given in \prefpp{tbl:larcR3}.\footnote{\seessp{lab_larc_distances_R3.xlg}}
 \end{table}
 
 \begin{figure}
-  \gsize%
   \centering%
-  \includegraphics{../common/math/graphics/pdfs/larc_R2_balls.pdf}%
+  \includegraphics[width=\tw]{../common/math/graphics/pdfs/larc_R2_balls.pdf}%
   \caption{\fncte{Lagrange arc distance} unit balls, and dashed \fncte{$\frac{1}{\pi}$-scaled Euclidean metric} unit balls \label{fig:larc}}
 \end{figure}
 %---------------------------------------
