--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -89,6 +89,7 @@
 \newboolean{mat_calc}
 \newboolean{measure}
 \newboolean{metric}
+\newboolean{metrictrans}
 \newboolean{metricex}
 \newboolean{morph}
 \newboolean{mra}
