--- a/common/interpo.tex
+++ b/common/interpo.tex
@@ -695,7 +695,7 @@ Let
        \sum_{m=0}^{p-1} {p-1+m\choose m} y^m
   \\&= \sum_{n=0}^{2p-1} \sum_{k=\max(0,n-q)}^{\min(n,p)}
        {p\choose k} (-1)^k {p-1+n-k\choose n-k} y^n
-    && \text{by \pref{thm:polymult} \prefpo{thm:polymult}}
+    && \text{by \prefp{thm:polymult}}
   \\&= \sum_{n=0}^{2p-1} \sum_{k=\max(0,n-q)}^{\min(n,p)}
        (-1)^k \frac{p!}{(p-k)!k!} \frac{(p-1+n-k)!}{(p-1)!(n-k)!} y^n
   \\&= p \sum_{n=0}^{2p-1}
