em permittivity table

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -115,6 +115,15 @@
   url          = {http://frontweb.vuse.vanderbilt.edu/vuse_web/directory/facultybio.asp?FacultyID=9},
   }
 
+@book{cerquera2017,
+  author       = {Manuel Ricardo P/'erez Cerquera and Julian David Colorado Monta/~no and Iv/'an Mondrag/'on},
+  title        = {UAV for Landmine Detection Using SDR-Based GPR Technology},
+  doi          = {10.5772/intechopen.69738},
+  url          = {https://cdn.intechopen.com/pdfs/56737.pdf},
+  year         = {2017},
+  month        = {December 20},
+  }
+
 @book{chitode2009dsp,
   isbn         = {9788184316469},
   isbn10       = {8184316461},
