signal flow graph references

--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -472,6 +472,15 @@
   language     = {English},
   }
 
+@book{phillips1995,
+  author       = {C.L. Phillips and H.T. Nagle},
+  year         = {1995},
+  title        = {Digital Control Systems Analysis and Design},
+  edition      = {3},
+  publisher    = {Prenctice Hall},
+  address      = {New Jersey},
+  }
+
 @book{pitas1991,
   author       = {Ioannis Pitas and Anastasios N. Venetsanopoulos},
   title        = {Nonlinear Digital Filters: Principles and Applications},
@@ -771,5 +780,4 @@
   year         = {2001},
   isbn         = {0-13-974163-1},
   }
-
 
