--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -49,6 +49,7 @@
 \newboolean{boolean}
 \newboolean{bwav}
 \newboolean{calculus}
+\newboolean{cdma}
 \newboolean{cinput}
 \newboolean{convex}
 \newboolean{dsp}
