--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -615,6 +615,29 @@
   library      = {TK5102.5.S3528 1990},
   }
 
+@book{schlichtharle2000,
+  isbn         = {9783540668411},
+  title        = {Digital Filters: Basics and Design},
+  author       = {Dietrich Schlichth/:arle},
+  pubisher     = {Springer Science & Business Media},
+  year         = {2000},
+  isbn10       = {3540668411}, 
+  pages        = {361},
+  url          = {http://books.google.com/books?vid=ISBN9783540668411},
+  }
+
+@book{schlichtharle2011,
+  isbn         = {9783642143250},
+  title        = {Digital Filters: Basics and Design},
+  edition      = {2},
+  author       = {Dietrich Schlichth/:arle},
+  pubisher     = {Springer Science & Business Media},
+  year         = {2011},
+  isbn10       = {3642143253}, 
+  pages        = {527},
+  url          = {http://books.google.com/books?vid=ISBN9783642143250},
+  }
+
 @book{serra1982,
   author       = {Jean Serra},
   title        = {Image Analysis and Mathematical Processing},
