--- a/common/cdma.tex
+++ b/common/cdma.tex
@@ -1,9 +1,7 @@
 %============================================================================
-% NCTU - Hsinchu, Taiwan
 % LaTeX File
 % Daniel Greenhoe
 %============================================================================
-
 
 %======================================
 \chapter{Spread Spectrum}
@@ -526,7 +524,11 @@ Thus, $x=z^{-1}$.
 \end{liste}
 Then the multiplier-divider (for any mathematical field) can be implemented as shown
 in \prefp{fig:df1}.  
-This structure is called the \structe{Direct Form I} implementation;\footnote{\citerp{oppenheim1999}{344}}
+This structure is called the \structe{Direct Form I} implementation;\footnote{
+  \citerp{oppenheim1999}{344},
+  \citerppgc{schlichtharle2000}{96}{98}{9783540668411}{5.3.2 Direct Form Filters},
+  \citerppgc{schlichtharle2011}{147}{150}{9783642143250}{5.3.2 Direct Form Filters}
+  }
 it implements the rational expression
 \[
    f(x) \frac{b_mx^m + b_{m-1}x^{m-1} + \cdots + b_2x^2 + b_1x + b_0}
