begin Stromberg wavelet material

--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -190,6 +190,18 @@
   abstract     = {Several variations are given on the construction of orthonormal bases of wavelets with compact support. They have, respectively, more symmetry, more regularity, or more vanishing moments for the scaling function than the examples constructed in Daubechies [Comm. Pure Appl. Math., 41 (1988), pp. 909¡V996].},
   }
 
+@book{jaffard2001,
+  title        = {Wavelets: Tools for Science and Technology},
+  author       = {Stephane Jaffard and Yves Meyer and Robert Dean Ryan},
+  isbn         = {9780898718119},
+  series       = {Other Titles in Applied Mathematics},
+  urlx         = {https://books.google.com/books?id=rj6qtD2wITYC},
+  year         = {2001},
+  url          = {http://books.google.com/books?vid=ISBN9780898718119},
+  publisher    = {Society for Industrial and Applied Mathematics (SIAM)},
+  address      = {3600 Market Street, Floor 6, Philadelphia, PA 19104},
+}
+
 @book{greenhoe2013wsd,
   title        = {Wavelet Structure and Design},
   series       = {Mathematical Structure and Design series},
@@ -220,6 +232,16 @@
   edition      = {0.43},
   note         = {\url{https://www.researchgate.net/publication/267157621}},
   url          = {https://arxiv.org/abs/1410.4859},
+  }
+
+@misc {greenhoe_3964474,
+  title        = {How is Stromberg Wavelet S orthogonal to Simple tents?},
+  author       = {Daniel J. Greenhoe},
+  notex        = {https://math.stackexchange.com/users/726815/daniel-j-greenhoe},
+  howpublished = {Mathematics Stack Exchange},
+  note         = {URL:https://math.stackexchange.com/q/3964474 (version: 2020-12-28)},
+  eprint       = {https://math.stackexchange.com/q/3964474},
+  url          = {https://math.stackexchange.com/q/3964474}
   }
 
 @article{goodman1993,
@@ -405,13 +427,14 @@
 
 @article{jawerth,
   author       = {Bjorn Jawerth and Wim Sweldens},
-  title        = {An Overview of Wavelet Based Multiresolutional Analysis},
+  title        = {An Overview of Wavelet Based Multiresolution Analysis},
   journal      = {SIAM Review},
   volume       = {36},
   year         = {1994},
   month        = {September},
   pages        = {377--412},
-  url          = {http://cm.bell-labs.com/who/wim/papers/papers.html#overview},
+  urlx         = {http://cm.bell-labs.com/who/wim/papers/papers.html#overview},
+  url          = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.45.5864&rep=rep1&type=pdf},
   }
 
 @book{kammler2008,
@@ -677,6 +700,22 @@
   urlw         = {http://www.worldcat.org/isbn/0961408871},
   urla         = {http://www.amazon.com/dp/0961408871},
   language     = {english},
+  }
+
+@incollection{stromberg1983,
+  author       = {Jan-Olov Str/:omberg},
+  title        = {A Modified Franklin System and Higher-order Spline Systems on $R^n$ as Unconditional Bases for Hardy Spaces},
+  year         = {1983},
+  booktitle    = {Conference Harmonic Analysis in Honor of A. Zygmond},
+  volume       = {II},
+  editor       = {William Beckner and Alberto P. Calder/'on and Robert Fefferman and Peter W. Jones},
+  pages        = {475--494},
+  publisher    = {CRC Press},
+  isbn         = {9780534980412},
+  isbn10       = {0534980414},
+  url          = {http://books.google.com/books?vid=ISBN9780534980412},
+  urlw         = {http://www.worldcat.org/isbn/9780534980412},
+  urla         = {http://www.amazon.com/dp/9780534980412},
   }
 
 @inproceedings{sweldens93,
