--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -557,8 +557,8 @@ The term ``\fncte{spectral power}" is a bit of an oxymoron because ``spectral"
 deals with leaving the time-domain for the frequency-domain, howbeit 
 the concept of power is solidly founded on the concept of time in that power = energy per time.
 
-However, \prope{Parseval's Theorem} \xref{prop:parseval_reconstruction}
-demonstrates that power in time can also be calculated in frequency.
+However, the \prope{Plancherel Formula}, or more generally \prope{Parseval's Identity} \xref{prop:parseval_reconstruction},
+demonstrates that power in time can also be calculated in frequency.\footnote{\url{https://math.stackexchange.com/questions/3785037/}}
 So, it makes some sense to speak of the term ``spectral power". 
 Moreover, one way to estimate this power is to average the 
 Fourier Transforms of the product $\abs{\rvx(n)}^2=\rvx(n)\rvx^\ast(n)$\ldots that is, to use an estimate of 
