--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1136,6 +1136,8 @@
 \newcommand{\fgb }  [0]{{\mathfnct{\bar{g}}}}
 \newcommand{\fphi}  [0]{{\mathfnct{\phi}}}
 \newcommand{\fpsi}  [0]{{\mathfnct{\psi}}}
+\newcommand{\flambda}[0]{{\mathfnct{\lambda}}}
+\newcommand{\fLambda}[0]{{\mathfnct{\Lambda}}}
 \newcommand{\ftheta}[0]{{\mathfnct{\theta}}}
 \newcommand{\ftheti}[0]{{\mathfnct{\theta}^{-1}}}
 \newcommand{\fs}    [0]{{\mathfnct{s}}}
